[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy1/Slime.gd" type="Script" id=2]
[ext_resource path="res://Enemy1/SoftCollision.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy1/Slime2.png" type="Texture" id=4]
[ext_resource path="res://Player/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/WanderController.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="CapsuleShape2D" id=2]
height = 0.0

[sub_resource type="CircleShape2D" id=5]
radius = 7.7515

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="CircleShape2D" id=4]
radius = 92.5791

[sub_resource type="CircleShape2D" id=6]
radius = 5.71457

[node name="Slime" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="SlimeSprite" type="Sprite" parent="."]
texture = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.210457, 3.648 )
rotation = 1.57954
scale = Vector2( 0.320025, 0.641761 )
shape = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]
visible = false
collision_layer = 64

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 1.26277 )
scale = Vector2( 1, 0.839999 )
shape = SubResource( 5 )

[node name="SoftCollision" parent="." instance=ExtResource( 3 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, 1.11362 )
scale = Vector2( 0.72, 0.6 )
shape = SubResource( 3 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 4 )

[node name="WanderController" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 1.19262 )
shape = SubResource( 6 )

[node name="Stats" parent="." instance=ExtResource( 8 )]
maxHealth = 3

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibilityStarted" from="Hurtbox" to="." method="_on_Hurtbox_invincibilityStarted"]
[connection signal="noHealth" from="Stats" to="." method="_on_Stats_noHealth"]

[editable path="Hurtbox"]
[editable path="SoftCollision"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
